--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>MARSH | admin</title>
+    <title>MARSH COOP | admin</title>
     <!-- Fonts to support Material Design -->
     <link
       rel="stylesheet"
@@ -32,6 +32,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <script type="text/javascript" src="ghspa.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
