--- a/public/404.html
+++ b/public/404.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <title>404</title>
-    <script type="text/javascript" src="ghspa.js"></script>
+    <script type="text/javascript" src="/ghspa.js"></script>
   </head>
 
   <body>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <h1>404</h1>
+    <h3>Not Found</h3>
+    <p>sorry about that. 😿</p>
   </body>
 </html>
