--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <script type="text/javascript" src="ghspa.js"></script>
+    <script type="text/javascript" src="/ghspa.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
